force-app/main/default/objects/Provisioning_Requested__e/Provisioning_Requested__e.object-meta.xml
<CustomObject>
    <description
  >Fired when an Order is ready to provision; subscribed by provisioning automation.</description>
    <label>Provisioning Requested</label>
    <pluralLabel>Provisioning Requested Events</pluralLabel>
</CustomObject>