force-app/main/default/objects/Provisioning_Requested__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Id of the Account the Order belongs to.</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>