force-app/main/default/objects/Provisioning_Requested__e/fields/Implementation_Package__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Package__c</fullName>
    <description>Implementation package sold with the order.</description>
    <label>Implementation Package</label>
    <length>80</length>
    <type>Text</type>
</CustomField>