force-app/main/default/objects/Provisioning_Requested__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Id of the Order to provision.</description>
    <label>Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>