force-app/main/default/objects/Provisioning_Requested__e/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Primary product family being provisioned.</description>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>