force-app/main/default/objects/Provisioning_Requested__e/fields/Requires_AI_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Requires_AI_Dispatch__c</fullName>
    <description
  >True when the order includes the AI Dispatch add-on.</description>
    <label>Requires AI Dispatch</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>